fixed some minor spacing issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -96,6 +96,10 @@ nav {
 
 //Posts
 
+.container {
+  margin-top: 3rem;
+}
+
 h2 {
   @include headings;
   color: $highlight;
